--- a/game1/game1.vcxproj.filters
+++ b/game1/game1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="gameData.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="gameInit.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -34,6 +37,9 @@
     </ClCompile>
     <ClCompile Include="game1.cpp">
       <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="gameInit.cpp">
+      <Filter>Заголовочные файлы</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
