--- a/game1/game1.vcxproj
+++ b/game1/game1.vcxproj
@@ -148,13 +148,17 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="collision.h" />
+    <ClInclude Include="createObjects.h" />
     <ClInclude Include="gameData.h" />
     <ClInclude Include="gameInit.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="game1.cpp" />
+    <ClCompile Include="collision.cpp" />
+    <ClCompile Include="createObjects.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="gameInit.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
