--- a/game1/game1.vcxproj
+++ b/game1/game1.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="createObjects.h" />
     <ClInclude Include="gameData.h" />
     <ClInclude Include="gameInit.h" />
+    <ClInclude Include="moveBackG.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -160,6 +161,7 @@
     <ClCompile Include="createObjects.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="gameInit.cpp" />
+    <ClCompile Include="moveBackG.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
